--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../dist/output.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../dist/output.css" />
     <title>#5</title>
-</head>
-<body>
-    
+  </head>
+  <body class="font-thin font-medium bg-slate-950 text-slate-50">
 
+    <div class="wrapper relative w-full h-screen">
+
+      <div class="nav w-full flex justify-between items-center opacity-0">
+        <div class="left flex m-14">
+          <span class="mx-3 font-semibold">New</span>
+          <span>Legend</span>
+        </div>
+
+        <div class="right flex m-14">
+          <span class="font-semibold">Joker</span>
+          <p class="mx-3">every thing is a joke!</p>
+        </div>
+      </div>
+
+      <div class="intro absolute top-0  w-full">
+
+        <div class="hero flex justify-center items-center my-10 px-20 py-28">
+          <div class="left-hero w-5/12">
+            <p class="font-semibold">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+              iusto tempore ea velit dignissimos sequi! Ipsa obcaecati,
+              aspernatur aut accusamus maiores consequuntur corrupti amet magnam
+              nihil. Ipsa similique facere aperiam.
+            </p>
+          </div>
+
+          <div class="right-hero w-6/12">
+            <img class="mx-auto" src="./hero.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="slider fixed top-0 w-full h-full"></div>
+
+
+<p class="bg-red-600 container h-32 mx-auto p-32 text-slate-200">dflmxlcx;lvnlvxinlvxx</p>
 
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
